@@ -1,3 +1,15 @@
+2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (EvalNamespace): fixed to work when attached to a
+	foreign interpreter. [Bug #453431]
+	Added fix that allows access to Tk privates in 8.4.  Still needs
+	a long-term fix. [Bug #450865] (porter)
+
+2001-08-03  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (EvalCmd): protected against non-existent
+	tkPriv(mouseMoved) variable
+
 2001-07-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (RetrieveFilter, RetrieveAuthentication): added
